# spiris-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENT_PLAN.md  INTEGRATION_TESTING_TASKS.md  LICENSE-MIT  PLAN_100_COVERAGE.md  README.md
.github/workflows/: ci.yml  release.yml
benches/: client_bench.rs
examples/: create_customer.rs  create_invoice.rs  list_customers.rs  oauth_flow.rs
spiris-tui/: Cargo.toml  NEW_FEATURES.md  README.md
spiris-tui/src/: app.rs  auth.rs  config.rs  main.rs  ui.rs
src/: auth.rs  client.rs  error.rs  lib.rs  macros.rs  middleware.rs  pagination.rs  query.rs  rate_limit.rs  retry.rs  types.rs  webhooks.rs
src/endpoints/: accounts.rs  allocation_periods.rs  approvals.rs  article_account_codings.rs  article_labels.rs  articles.rs  attachments.rs  bank_accounts.rs  banks.rs  company_settings.rs  cost_centers.rs  countries.rs  currencies.rs  customer_invoice_drafts.rs  customer_labels.rs  customer_ledger_items.rs  customers.rs  delivery_methods.rs  delivery_terms.rs  documents.rs  fiscal_years.rs  invoices.rs  messages.rs  mod.rs  orders.rs  projects.rs  quotations.rs  supplier_invoice_drafts.rs  supplier_invoices.rs  supplier_labels.rs  supplier_ledger_items.rs  suppliers.rs  terms_of_payment.rs  units.rs  users.rs  vat_codes.rs  vouchers.rs
tests/: accounts_test.rs  articles_test.rs  auth_pkce_test.rs  client_config_test.rs  client_test.rs  contract_test.rs  customers_test.rs  decimal_test.rs  endpoint_crud_test.rs  error_handling_test.rs  invoices_test.rs  mock_server.rs  monetary_types_test.rs  orders_test.rs  pagination_stream_test.rs  projects_test.rs  query_builder_test.rs  rate_limiting_test.rs  real_api_test.rs  retry_test.rs  suppliers_test.rs  test_utils.rs  token_refresh_test.rs  type_validation_test.rs  vouchers_test.rs
tests/fixtures/: article_simple.json  customer_full.json  customer_list_empty.json  customer_list_page1.json  customer_list_page2.json  customer_simple.json  error_400_validation.json  error_401_unauthorized.json  error_404_not_found.json  error_429_rate_limit.json  error_500_server.json  invoice_simple.json  invoice_with_rows.json  token_error_invalid_grant.json  token_response_valid.json  token_response_with_refresh.json
