[package]
name = "spiris_bokforing"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["Jimmy Stridh <jimmy@stridh.dev>"]
description = "Rust client for the Spiris Bokföring och Fakturering API (formerly Visma eAccounting)"
license = "MIT"
repository = "https://github.com/jimmystridh/spiris-client-rs"
homepage = "https://github.com/jimmystridh/spiris-client-rs"
documentation = "https://docs.rs/spiris_bokforing"
readme = "README.md"
keywords = ["spiris", "visma", "eaccounting", "api", "accounting"]
categories = ["api-bindings", "asynchronous"]
exclude = [
    ".github/*",
    "spiris-tui/*",
    "CLAUDE.md",
    "PLAN_100_COVERAGE.md",
]

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
oauth2 = "4.4"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
