[package]
name = "spiris-tui"
version = "0.1.0"
edition = "2021"
authors = ["Spiris TUI Contributors"]
description = "Terminal User Interface for Spiris Bokföring och Fakturering API"
license = "MIT OR Apache-2.0"

[dependencies]
# Spiris API client
spiris_bokforing = { path = ".." }

# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
toml = "0.8"

# Date/time
chrono = "0.4"

# Error handling
anyhow = "1.0"

# HTTP server for OAuth callback
tiny_http = "0.12"

# URL parsing
url = "2.5"
